# cell

./: Cargo.toml  Lang.md  README.md
crates/cell_common/: Cargo.toml
crates/cell_common/src/: error.rs  lib.rs  macros.rs  profiler.rs  source.rs  strings.rs
crates/cell_common/src/profiler/: nop.rs  profiler.rs
crates/cell_common/src/source/: file.rs  span.rs
crates/cell_parser/: Cargo.toml
crates/cell_parser/src/: db.rs  lib.rs  parse.rs  token.rs
crates/cell_syntax/: Cargo.toml
crates/cell_syntax/src/: ast.rs  grammar.ungrammar  lib.rs  syntax_kind.rs
crates/cell_syntax/src/syntax_kind/: generated.rs
xtask/: Cargo.toml
xtask/src/: ast.rs  ci.rs  codegen.rs  env.rs  lib.rs  main.rs  shell.rs  util.rs
xtask/src/codegen/: syntax.rs
