[package]
name = "cell_common"
version = "0.1.0"
authors = ["Justus K <justus.k@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text-size = "1.0.0"
salsa = "0.15.2"
smol_str = "0.1.16"
codespan-reporting = "0.9.5"
