[package]
name = "cell_common"
version = "0.1.0"
authors = ["Justus K <justus.k@protonmail.com>"]
edition = "2018"
license = "Zlib"

[dependencies]
text-size = "1.0.0"
salsa = "0.15.2"
smol_str = "0.1.16"
codespan-reporting = "0.9.5"

# Required for profiling
measureme = { version = "0.7.1", optional = true }
once_cell = { version = "1.4.0", optional = true }
derive_more = "0.99.9"

[features]
default = ["profiler"]
profiler = ["measureme", "once_cell"]
